Appbar Added (Registration on Standby)

--- a/src/components/dialog/style.scss
+++ b/src/components/dialog/style.scss
@@ -1,3 +1,13 @@
 .warning {
   color: Red;
 }
+.title {
+  font-family: serif;
+  font-size: 20px;
+  font-weight: 300;
+  font-style: italic;
+  line-height: 44px;
+  margin: 0 0 12px;
+  text-align: center;
+  // color: rgb(255, 136, 0);
+}
